--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,30 @@
 pom.xml
 pom.xml.asc
+.calva/output-window/
+.classpath
+.clj-kondo/.cache
+.cpcache
+.eastwood
+.factorypath
+.hg/
+.hgignore
+.java-version
+.lein-*
+.lsp/.cache
+.lsp/sqlite.db
+.nrepl-history
+.portal/vs-code.edn
+.project
+.rebel_readline_history
+.settings
+.socket-repl-port
+.sw*
+.vscode
+*.swp
+*~
+.idea
+*.iml
+
 *.jar
 *.class
 /lib/
